# streaming-server

./: .gitignore  README.md  pyproject.toml  stream.txt
files/: 208828da-51f0-49de-b0e5-53bc9e722853.ply  8d742446-fc81-4319-ab9d-10b4107f2644.ply  8f4e6067-c0aa-4042-b732-40b8880e78b0.ply  90473909-e51f-4f54-a11d-7c57f34c2c97.ply
resources/: 24d25dde-ce56-475d-aa1c-d3da1e88cbe0.ply  7f52fef5-77b7-4f7d-9a11-ce9559e2203b.ply  adcff510-feb0-49dc-b9e1-3d19dff4c81f.ply  data.ply  dfc8e038-c6c6-4160-a050-390c96601f60.ply  f9094a41-7d4e-44db-8ff2-c329824d9726.ply  ff1adcde-ae56-4abe-aa66-0d9d97732d91.ply
src/server/: clients.py  models.py  server.py
